# resize-util

./: .gitattributes  .gitignore  README.md
.github/workflows/: build-windows.yml
gui/: BUILD.md  README.md  build.bat  build.sh  main.py  pyproject.toml  resize-gui.spec
image-resize/: README.md  main.py  pyproject.toml
pdf-resize/: README.md  main.py  pyproject.toml
